# Python_Django-shop_project

./: .gitignore  README.md  pyproject.toml  requirements.txt  tools_make_fixtures.py
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: categories.json  products.json
catalog/management/commands/: init_groups.py  load_shop_data.py
catalog/migrations/: 0001_initial.py  0002_product_image.py  0002_product_image_product_is_available_product_stock.py  0003_alter_category_options_alter_product_options_and_more.py
catalog/templates/: base_generic.html
catalog/templates/catalog/: category_products.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
users/templates/users/: login.html  register.html
